--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,4 +1,4 @@
-/*@import './base.css';*/
+@import './base.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -10,7 +10,9 @@
 }
 #app {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   font-weight: normal;
   background-color: white;
 }
